added basic functional

--- a/style.css
+++ b/style.css
@@ -38,21 +38,20 @@ h2 {
   cursor: pointer;
 }
 
-.button--add {
+.button--add, .button--clear-all {
   width: 100%;
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
+  height: 25px;
   border: none;
-  margin: 0 auto;
-  padding: 4px;
-  border-radius: 6px;
-  background: transparent;
-  font: 1rem/1.25rem 'Rubik', sans-serif;
-  font-weight: 400;
+  border-radius: 30px;
+  padding-right: 8px;
+  background: #fff;
+  font: .875rem/1.5625rem 'Rubik', sans-serif;
 }
 
-.button--add > span {
+.button--add > span, .button--clear-all > span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -62,21 +61,39 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   margin-right: 5px;
   border-radius: 50%;
-  background: transparent;
-  color: #5eca5e;
-  font: 1.25rem/100% 'Roboto', sans-serif;
+  color: #fff;
+  font: 1.5625rem/100% 'Roboto', sans-serif;
   font-weight: 700;
   -webkit-transition: .15s ease-in-out;
   transition: .15s ease-in-out;
 }
 
-.button--add:hover > span {
-  color: #fff;
+.button--add > span {
   background: #5eca5e;
+}
+
+.button--enter-item, .button--cancel-item {
+  width: 18px;
+  height: 18px;
+  border: none;
+  border-radius: 50%;
+}
+
+.button--enter-item {
+  background: green;
+  margin-top: auto;
+}
+
+.button--cancel-item {
+  background: red;
+}
+
+.button--clear-all > span {
+  background: #ca5e5e;
 }
 
 .button--delete, .button--edit {
@@ -141,9 +158,22 @@ h2 {
   background: linear-gradient(135deg, #d3f7f7 30%, #e7f7f7 100%);
 }
 
-.todo__title {
+.todo__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 15px;
-  text-align: center;
+  -webkit-column-gap: 10px;
+          column-gap: 10px;
+  padding-left: 15px;
+}
+
+.todo__title {
+  line-height: 100%;
+  margin-right: 5px;
 }
 
 .todo__list {
@@ -155,7 +185,7 @@ h2 {
       -ms-flex-direction: column;
           flex-direction: column;
   row-gap: 8px;
-  border-radius: 6px 6px 0 0;
+  border-radius: 6px;
   padding: 15px;
   background: #fff;
   list-style: none;
@@ -171,13 +201,35 @@ h2 {
           column-gap: 10px;
   padding-bottom: 8px;
   border-bottom: 1px solid #e7e7e7;
+  -webkit-transition: .15s ease-in-out;
+  transition: .15s ease-in-out;
+}
+
+.todo__item:hover {
+  border-color: #5e5e5e;
 }
 
 .todo__item:hover .button {
   opacity: 1;
 }
 
-.todo__form {
+.todo__add-form {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: 'buttons input-name' 'buttons input-description' 'buttons input-datetime';
+  -ms-grid-columns: 18px auto;
+      grid-template-columns: 18px auto;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  padding: 15px;
+  background: #fff;
+}
+
+.add-form__buttons {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  grid-area: buttons;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -185,9 +237,68 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  border-radius: 0 0 6px 6px;
-  padding: 0 15px 15px;
-  background: #fff;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.add-form__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font: 1rem/1.5rem 'Rubik', sans-serif;
+  white-space: nowrap;
+}
+
+.add-form__label .label--name {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: input-name;
+}
+
+.add-form__label .label--description {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: input-description;
+}
+
+.add-form__label .label--datetime {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: input-datetime;
+}
+
+.add-form__input {
+  width: 100%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #e7e7e7;
+  margin-left: 10px;
+  -webkit-transition: .15s ease-in-out;
+  transition: .15s ease-in-out;
+}
+
+.add-form__input:hover, .add-form__input:focus {
+  border-color: #5e5e5e;
+}
+
+.add-form__input.input--name {
+  color: #141414;
+  font: 1rem/1.5rem 'Rubik', sans-serif;
+  font-weight: 500;
+}
+
+.add-form__input.input--description, .add-form__input.input--datetime {
+  margin-top: 3px;
+  color: #5e5e5e;
+  font: .875rem/1.125rem 'Rubik', sans-serif;
+}
+
+.add-form__input.input--datetime {
+  height: 19px;
 }
 
 .item__name {
@@ -208,6 +319,7 @@ h2 {
 }
 
 .item__description {
+  margin-top: 3px;
   -ms-grid-row: 2;
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
@@ -219,6 +331,7 @@ h2 {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-area: datetime;
+  margin-top: 3px;
 }
 
 .item__datetime::before {
