--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h2 {
   cursor: pointer;
 }
 
-.button--add, .button--clear-all, .button--enter-item, .button--cancel-item, .button--delete, .button--edit {
+.button--add, .button--clear-all, .button--enter, .button--cancel, .button--edit, .button--delete {
   border: none;
   border-radius: 50%;
   outline: 2px solid transparent;
@@ -47,16 +47,16 @@ h2 {
   transition: all .2s ease-in-out;
 }
 
-.button--add svg, .button--clear-all svg, .button--enter-item svg, .button--cancel-item svg, .button--delete svg, .button--edit svg {
+.button--add svg, .button--clear-all svg, .button--enter svg, .button--cancel svg, .button--edit svg, .button--delete svg {
   pointer-events: none;
 }
 
-.button--add:hover, .button--enter-item:hover, .button--edit:hover {
+.button--add:hover, .button--enter:hover, .button--edit:hover {
   outline-color: #b6ebc3;
   background: #fff;
 }
 
-.button--clear-all:hover, .button--cancel-item:hover, .button--delete:hover {
+.button--clear-all:hover, .button--cancel:hover, .button--delete:hover {
   outline-color: #e79d9d;
   background: #fff;
 }
@@ -66,7 +66,7 @@ h2 {
   height: 30px;
 }
 
-.button--enter-item, .button--cancel-item {
+.button--enter, .button--cancel {
   width: 26px;
   height: 26px;
 }
@@ -148,7 +148,7 @@ h2 {
           column-gap: 10px;
 }
 
-.todo__add-form {
+.todo__create-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,16 +166,16 @@ h2 {
   overflow: hidden;
 }
 
-.todo__add-form.showed {
+.todo__create-form.showed {
   max-height: 164px;
   padding: 15px 20px;
 }
 
-.todo__add-form.showed input, .todo__add-form.showed div {
+.todo__create-form.showed input, .todo__create-form.showed div {
   opacity: 1;
 }
 
-.todo__add-form input, .todo__add-form div {
+.todo__create-form input, .todo__create-form div {
   opacity: 0;
   -webkit-transition: opacity .35s ease;
   transition: opacity .35s ease;
@@ -230,7 +230,7 @@ h2 {
   opacity: 0;
 }
 
-.add-form__input {
+.create-form__input {
   width: 100%;
   min-height: 0;
   outline: none;
@@ -240,27 +240,27 @@ h2 {
   transition: .15s ease-in-out;
 }
 
-.add-form__input:hover, .add-form__input:focus {
+.create-form__input:hover, .create-form__input:focus {
   border-color: #5e5e5e;
 }
 
-.add-form__input.input--name {
+.create-form__input.input--name {
   color: #141414;
   font: 1rem/2rem 'Inter', sans-serif;
   font-weight: 600;
 }
 
-.add-form__input.input--description, .add-form__input.input--datetime {
+.create-form__input.input--description, .create-form__input.input--datetime {
   margin-top: 3px;
   color: #5e5e5e;
   font: .875rem/1.625rem 'Inter', sans-serif;
 }
 
-.add-form__input.input--datetime {
+.create-form__input.input--datetime {
   height: 27px;
 }
 
-.add-form__buttons {
+.create-form__buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
