--- a/style.scss
+++ b/style.scss
@@ -32,8 +32,8 @@ h2 {
   cursor: pointer;
 
   &--add, &--clear-all,
-  &--enter-item, &--cancel-item,
-  &--delete, &--edit {
+  &--enter, &--cancel,
+  &--edit, &--delete {
     border: none;
     border-radius: 50%;
     outline: 2px solid transparent;
@@ -45,7 +45,7 @@ h2 {
     }
   }
 
-  &--add, &--enter-item, &--edit {
+  &--add, &--enter, &--edit {
 
     &:hover {
       outline-color: #b6ebc3;
@@ -53,7 +53,7 @@ h2 {
     }
   }
 
-  &--clear-all, &--cancel-item, &--delete {
+  &--clear-all, &--cancel, &--delete {
 
     &:hover {
       outline-color: #e79d9d;
@@ -66,7 +66,7 @@ h2 {
     height: 30px;
   }
 
-  &--enter-item, &--cancel-item {
+  &--enter, &--cancel {
     width: 26px;
     height: 26px;
   }
@@ -137,7 +137,7 @@ h2 {
     }
   }
 
-  &__add-form {
+  &__create-form {
     display: flex;
     flex-direction: column;
     max-height: 0;
@@ -210,7 +210,7 @@ h2 {
   }
 }
 
-.add-form {
+.create-form {
 
   &__input {
     width: 100%;
