--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,10 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(135deg, #b3eaf8 40%, #dcf8ff 100%);
+  background: #DDEFF7;
+  background: -webkit-linear-gradient(bottom right, #DDEFF7, #C0E5F4);
+  background: -moz-linear-gradient(bottom right, #DDEFF7, #C0E5F4);
+  background: linear-gradient(to top left, #DDEFF7, #C0E5F4);
   overflow: hidden;
 }
 
@@ -26,6 +29,7 @@ h2 {
 }
 
 .button {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,6 +47,25 @@ h2 {
     svg {
       pointer-events: none;
     }
+
+    &::before {
+      position: absolute;
+      border-radius: 6px;
+      font: .75rem/1rem 'Inter', sans-serif;
+      font-weight: 600;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity .2s ease-in-out;
+    }
+
+    &:hover::before {
+      opacity: 1;
+    }
+
+    &:disabled, &[disabled] {
+      opacity: 0 !important;
+      cursor: default;
+    }
   }
 
   &--add, &--enter, &--edit {
@@ -50,6 +73,11 @@ h2 {
     &:hover {
       outline-color: #b6ebc3;
       background: #fff;
+    }
+
+    &::before {
+      color: #207934;
+      background: #b6ebc3;
     }
   }
 
@@ -59,39 +87,97 @@ h2 {
       outline-color: #e79d9d;
       background: #fff;
     }
+
+    &::before {
+      color: #792020;
+      background: #e79d9d;
+    }
   }
 
   &--add, &--clear-all {
     width: 30px;
     height: 30px;
+
+    &::before {
+      bottom: -22px;
+      left: calc(50% - 35px);
+      width: 64px;
+      padding: 3px;
+    }
+  }
+
+  &--add::before {
+    content: 'Add Task';
+  }
+
+  &--clear-all::before {
+    content: 'Clear All';
   }
 
   &--enter, &--cancel {
     width: 26px;
     height: 26px;
+
+    &::before {
+      bottom: calc(50% - 10px);
+      width: 54px;
+      padding: 2px;
+    }
   }
 
-  &--delete, &--edit {
-    width: 26px;
-    height: 26px;
+  &--enter::before {
+    content: 'Enter';
+    left: -58px;
+  }
+
+  &--cancel::before {
+    content: 'Cancel';
+    right: -58px;
+  }
+
+  &--edit, &--delete {
+    width: 24px;
+    height: 24px;
+    margin: 1px 0;
     opacity: 0;
 
     svg {
       transition: fill .15s ease-in-out;
     }
-  }
 
-  &--delete:hover {
-
-    svg {
-      fill: #490000;
+    &::before {
+      bottom: -18px;
+      left: calc(50% - 23px);
+      width: 44px;
+      padding: 1px;
     }
   }
 
-  &--edit:hover {
+  &--edit {
 
-    svg {
-      fill: #154900;
+    &:hover {
+
+      svg {
+        fill: #154900;
+      }
+    }
+
+    &::before {
+      content: 'Edit';
+    }
+  }
+
+  &--delete {
+
+    &:hover {
+
+      svg {
+        fill: #490000;
+      }
+    }
+
+    &::before {
+      content: 'Close';
     }
   }
 }
@@ -101,7 +187,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 70px 15px 15px;
+  padding: 20px;
   height: 100%;
 }
 
@@ -113,19 +199,17 @@ h2 {
   max-width: 425px;
   min-width: 290px;
   height: 100%;
-  border: 1px solid #ebfdfd;
   border-radius: 6px;
-  padding: 15px 10px 10px;
-  background: linear-gradient(135deg, #e3fcfc 30%,#defdfd 100%);
-  z-index: 10
-  ;
+  padding: 20px 15px;
+  background: #fff;
+  z-index: 10;
 
   &__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
-    padding: 0 20px;
+    padding: 0 10px;
     z-index: 9;
   }
 
@@ -140,19 +224,22 @@ h2 {
   &__create-form {
     display: flex;
     flex-direction: column;
+    min-height: 0;
     max-height: 0;
     border-radius: 6px;
-    padding: 0 20px;
+    padding: 0 10px;
     background: #fff;
     z-index: -1;
-    transition: max-height .4s cubic-bezier(0.215, 0.61, 0.355, 1),
-                padding .3s cubic-bezier(0.215, 0.61, 0.355, 1) .1s;
+    transition: max-height .3s cubic-bezier(0.215, 0.61, 0.355, 1),
+                padding .3s cubic-bezier(0.215, 0.61, 0.355, 1),
+                min-height .3s ease;
     overflow: hidden;
 
 
     &.showed {
-      max-height: 164px;
-      padding: 15px 20px;
+      min-height: 154px;
+      max-height: 154px;
+      padding: 10px 10px 0;
 
       & input, div {
         opacity: 1;
@@ -161,51 +248,80 @@ h2 {
 
     & input, div {
       opacity: 0;
-      transition: opacity .35s ease;
+      transition: opacity .3s ease;
     }
   }
 
   &__list {
+    position: relative;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
-    margin-top: 10px;
     border-radius: 6px;
-    padding: 15px 20px 20px;
+    padding-bottom: 10px;
     background: #fff;
     list-style: none;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+      width: 15px;
+    }
+
+    &::-webkit-scrollbar-track {
+      border-radius: 5px;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #c8e7f3;
+      border: 5px solid #fff;
+      border-radius: 10px;
+    }
   }
 
   &__no-tasks-label {
+    padding: 10px;
     text-align: center;
+    font: 1rem/1.5rem 'Inter', sans-serif;
+    font-weight: 600;
   }
 
   &__item {
+    position: relative;
     display: grid;
-    grid-template-areas:
-      'checkbox name controls'
-      'checkbox description description'
-      'checkbox datetime datetime';
-    grid-template-columns: 20px auto 58px;
-    column-gap: 10px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #e7e7e7;
+    grid-template-columns: 20px 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    border-radius: 6px;
+    padding: 10px;
     opacity: 1;
-    transition: border-color .2s ease-in-out,
-                opacity .3s ease-in-out .3s;
+    z-index: 1;
+    transition: opacity .3s ease-in-out .3s,
+                background .2s ease;
 
     &:hover {
-      border-color: #5e5e5e;
+      background: #ebf7fc;
 
       & .button {
         opacity: 1;
+      }
+
+      & .checkbox__label::before {
+        border-color: #7ec0da;
       }
     }
 
     &.hidden {
       opacity: 0;
+    }
+
+    &.checked {
+
+      & .item__content {
+        text-decoration: line-through;
+        user-select: none;
+        opacity: .25;
+      }
     }
   }
 }
@@ -214,11 +330,11 @@ h2 {
 
   &__input {
     width: 100%;
-    min-height: 0;
     outline: none;
+    padding: 0 10px;
     border: none;
     border-bottom: 1px solid #e7e7e7;
-    transition: .15s ease-in-out;
+    transition: all .15s ease-in-out;
 
     &:hover, &:focus {
       border-color: #5e5e5e;
@@ -238,6 +354,7 @@ h2 {
 
     &.input--datetime {
       height: 27px;
+      min-height: 27px;
     }
   }
 
@@ -251,8 +368,17 @@ h2 {
 
 .item {
 
+  &__content {
+    grid-area: 1 / 2 / 4 / 4;
+    display: flex;
+    flex-direction: column;
+    transition: opacity .2s ease;
+  }
+
   &__name {
-    grid-area: name;
+    max-width: 80%;
+    word-wrap: normal;
+    overflow: hidden;
     font: 1rem/1.625rem 'Inter', sans-serif;
     font-weight: 600;
   }
@@ -271,32 +397,27 @@ h2 {
     }
   }
 
-  &__description {
-    grid-area: description;
-
-    &::before {
-      content: url(icons/icon-description.svg);
-    }
+  &__description::before {
+    content: url(icons/icon-description.svg);
   }
 
-  &__datetime {
-    grid-area: datetime;
-
-    &::before {
-      content: url(icons/icon-calendar.svg);
-    }
+  &__datetime::before {
+    content: url(icons/icon-calendar.svg);
   }
 
   &__buttons {
-    grid-area: controls;
+    position: absolute;
+    top: 0;
+    right: 0;
     display: flex;
-    justify-content: flex-end;
-    gap: 6px;
+    column-gap: 4px;
+    padding: 10px 15px;
+    z-index: 1;
   }
 }
 
 .checkbox {
-  grid-area: checkbox;
+  grid-area: 1 / 1 / 4 / 2;
   position: relative;
 
   &__label::before {
@@ -306,11 +427,17 @@ h2 {
     left: 0;
     width: 16px;
     height: 16px;
-    margin-top: 3px;
-    border: 2px solid #8dd5e7;
+    margin-top: 2px;
+    border: 2px solid #c8e7f3;
     border-radius: 50%;
-    background: #fff;
+    background: transparent;
     cursor: pointer;
+    transition: border-color .2s ease,
+                background .2s ease;
+  }
+
+  &__label:hover::before{
+    background: #fff;
   }
 
   &__input {
@@ -321,7 +448,8 @@ h2 {
     clip: rect(0 0 0 0);
 
     &:checked + .checkbox__label::before {
-      background: #8dd5e7
+      border-color: #7ec0da;
+      background: #7ec0da
                   url(icons/icon-check.svg) center/cover no-repeat;
     }
   }
