--- a/style.css
+++ b/style.css
@@ -293,6 +293,11 @@ h2 {
   background: #c8e7f3;
   border: 5px solid #fff;
   border-radius: 10px;
+  cursor: pointer;
+}
+
+.todo__list::-webkit-scrollbar-thumb:hover {
+  background: #7ec0da;
 }
 
 .todo__no-tasks-label {
