add modal window and check-status in localStorage

--- a/style.scss
+++ b/style.scss
@@ -180,6 +180,36 @@ h2 {
       content: 'Close';
     }
   }
+
+  &--modal-yes, &--modal-cancel {
+    width: 95px;
+    outline: none;
+    border: 2px solid transparent;
+    border-radius: 15px;
+    padding: 6px 10px;
+    background: white;
+    font: 1rem/1rem 'Inter', sans-serif;
+    font-weight: 800;
+    transition: all .2s ease-in-out;
+  }
+
+  &--modal-yes {
+    background:#b6ebc3;
+    color: #154900;
+
+    &:hover {
+      border-color: #154900;
+    }
+  }
+
+  &--modal-cancel {
+    background: #e79d9d;
+    color: #490000;
+
+    &:hover {
+      border-color: #490000;
+    }
+  }
 }
 
 .main {
@@ -262,6 +292,7 @@ h2 {
     position: relative;
     display: flex;
     flex-direction: column;
+    height: 100%;
     border-radius: 6px;
     padding-bottom: 10px;
     background: #fff;
@@ -291,6 +322,10 @@ h2 {
   }
 
   &__no-tasks-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
     padding: 10px;
     text-align: center;
     font: 1rem/1.5rem 'Inter', sans-serif;
@@ -436,12 +471,11 @@ h2 {
 
   &__date, &__time {
     margin-top: 6px;
-    // align-self: center;
 
     &::before {
       width: 17px;
       height: 17px;
-      margin: -1px 6px 0 0;
+      margin-right: 6px;
     }
   }
 
@@ -451,10 +485,11 @@ h2 {
 
   &__date::before {
     content: url(icons/icon-calendar.svg);
+    margin-top: -1px;
   }
 
   &__time::before {
-    content: url(icons/icon-calendar.svg);
+    content: url(icons/icon-clock.svg);
   }
 
   &__buttons {
@@ -503,6 +538,61 @@ h2 {
       border-color: #7ec0da;
       background: #7ec0da
                   url(icons/icon-check.svg) center/cover no-repeat;
+    }
+  }
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  background: transparent;
+  opacity: 0;
+  transition: opacity .25s ease;
+
+  &.showed {
+    opacity: 1;
+
+    & .modal__content {
+      transform: scale(1);
+    }
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    background: rgba(255, 255, 255, 0.85);
+  }
+
+  &__content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    column-gap: 10px;
+    border-radius: 4px;
+    padding: 20px 15px;
+    background: white;
+    max-width: 280px;
+    box-shadow: 0px 0px 20px 1px rgba(34, 60, 80, 0.2);
+    transform: scale(.8);
+    transition: transform .35s ease;
+
+    & span {
+      flex-basis: 100%;
+      text-align: center;
+      pointer-events: none;
+      margin-bottom: 15px;
     }
   }
 }
