--- a/style.css
+++ b/style.css
@@ -596,13 +596,19 @@ h2 {
 .modal {
   display: none;
   position: absolute;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 4px;
   top: 0;
   left: 0;
   z-index: 10;
   width: 100%;
   height: 100%;
-  padding: 15px;
-  background: transparent;
+  background: rgba(255, 255, 255, 0.85);
   opacity: 0;
   -webkit-transition: opacity .25s ease;
   transition: opacity .25s ease;
@@ -615,23 +621,6 @@ h2 {
 .modal.showed .modal__content {
   -webkit-transform: scale(1);
           transform: scale(1);
-}
-
-.modal__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 4px;
-  width: 100%;
-  height: 100%;
-  padding: 15px;
-  background: rgba(255, 255, 255, 0.85);
 }
 
 .modal__content {
@@ -649,6 +638,7 @@ h2 {
   -webkit-column-gap: 10px;
           column-gap: 10px;
   border-radius: 4px;
+  margin: 20px;
   padding: 20px 15px;
   background: white;
   max-width: 280px;
