--- a/style.scss
+++ b/style.scss
@@ -545,13 +545,15 @@ h2 {
 .modal {
   display: none;
   position: absolute;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
   top: 0;
   left: 0;
   z-index: 10;
   width: 100%;
   height: 100%;
-  padding: 15px;
-  background: transparent;
+  background: rgba(255, 255, 255, 0.85);
   opacity: 0;
   transition: opacity .25s ease;
 
@@ -563,17 +565,6 @@ h2 {
     }
   }
 
-  &__wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 4px;
-    width: 100%;
-    height: 100%;
-    padding: 15px;
-    background: rgba(255, 255, 255, 0.85);
-  }
-
   &__content {
     display: flex;
     flex-wrap: wrap;
@@ -581,6 +572,7 @@ h2 {
     justify-content: center;
     column-gap: 10px;
     border-radius: 4px;
+    margin: 20px;
     padding: 20px 15px;
     background: white;
     max-width: 280px;
